--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "npm": "^9.8.1",
     "unofficial-valorant-api": "^1.0.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.0",
-    "@vue/cli-plugin-eslint": "^4.5.0",
-    "@vue/cli-plugin-router": "^4.5.0",
-    "@vue/cli-service": "^4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
