--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "valome",
+  "name": "valrun",
+  "description": "ValRun - Valorant Tracker ",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@babel/eslint-parser": "^7.5.4",
     "core-js": "^3.6.5",
+    "eslint-plugin-vue": "^9.17.0",
     "npm": "^9.8.1",
     "unofficial-valorant-api": "^1.0.4",
     "vue": "^3.0.0",
@@ -16,13 +20,10 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
-    "eslint-plugin-vue": "^7.0.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.18"
   },
@@ -36,7 +37,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
